--- a/main.css
+++ b/main.css
@@ -12,6 +12,11 @@ Use flexbox to:
 
 
 /*You don't need to change this unless you want to*/
+html{
+  width: 50%;
+  margin:auto;
+  background: white;
+}
 body {
     background: yellow;
     margin: 0;
@@ -22,6 +27,12 @@ body {
     background: darkblue;
     margin-top: 0px;
 }
+#nav{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
 
 #nav li{
     padding: 15px;
@@ -48,11 +59,26 @@ h1, h2 {
     background: red;
 }
 
+#gallery{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .gallery-item{
     width: 510px;
+}
+
+.sub-section{
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .sub-section img {
     margin: 10px;
     border: darkblue solid 3px;
+
 }
