--- a/main.css
+++ b/main.css
@@ -72,7 +72,7 @@ h1, h2 {
 .sub-section{
   display: flex;
   flex-direction: row;
-  align-content: center;
+  align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
 }
